--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-toastify": "^11.0.1",
+    "redux": "^5.0.1",
+    "redux-saga": "^1.3.0",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
