--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.1",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
     "swiper": "^11.1.15"
   },
